@@ -23,7 +23,4 @@ data_refresh ||= record.to_param
       <%= display_action_links(action_links, record, :level_0_tag => :td, :for => record.persisted? ? record : record.class) %>
     </tr>
   </table></td>
-
-  
-  <%= render_nested_view(action_links, record) unless @nested_auto_open.nil? %>
 </tr>
