@@ -26,7 +26,6 @@ module ActiveScaffold::Actions
       else
         do_refresh_list
       end
-      @nested_auto_open = active_scaffold_config.list.nested_auto_open
       respond_to_action(:list)
     end
 
